--- a/.github/workflows/dbt-run.yml
+++ b/.github/workflows/dbt-run.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
     secrets:
-      GCP_DBT_SERVICE_ACCOUNT_KEY:
+      GCP_SERVICE_ACCOUNT_KEY:
         required: true
 
 jobs:
@@ -27,10 +27,10 @@ jobs:
         uses: xom9ikk/dotenv@v2
 
       - name: Authenticate using service account
-        run: 'echo "$GOOGLE_KEY" > ./dbt-service-account.json'
+        run: 'echo "$GCP_SERVICE_ACCOUNT_KEY" > ./dbt-service-account.json'
         shell: bash
         env:
-          GOOGLE_KEY: ${{secrets.GCP_DBT_SERVICE_ACCOUNT_KEY}}
+          GCP_SERVICE_ACCOUNT_KEY: ${{secrets.GCP_SERVICE_ACCOUNT_KEY}}
 
       - name: Install dependencies
         run: |
