--- a/.github/workflows/dbt-run.yml
+++ b/.github/workflows/dbt-run.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install dbt
+          pip install dbt-bigquery
           dbt deps --target prod
       
       # Add dbt seed or other commands here if needed
