Change working directory

--- a/.github/workflows/dbt-run.yml
+++ b/.github/workflows/dbt-run.yml
@@ -35,16 +35,31 @@ jobs:
         env:
           GCP_SERVICE_ACCOUNT_KEY: ${{secrets.GCP_SERVICE_ACCOUNT_KEY}}
 
-      - name: Install dependencies
+      - name: Install dbt
+        working-directory: ./dbt
         run: |
           pip install dbt-bigquery
+        env:
+          DBT_PROFILES_DIR: ./dbt
+
+      - name: Install dbt packages
+        working-directory: ./dbt
+        run: |
           dbt deps --target prod
         env:
           DBT_PROFILES_DIR: ./dbt
       
       # Add dbt seed or other commands here if needed
       - name: Run dbt models
-        run: dbt run --target ${{ inputs.target }}
+        working-directory: ./dbt
+        run: |
+          dbt run --target ${{ inputs.target }}
+        env:
+          DBT_PROFILES_DIR: ./dbt
 
       - name: Test dbt models
-        run: dbt test --target ${{ inputs.target }}
+        working-directory: ./dbt
+        run: |
+          dbt test --target ${{ inputs.target }}
+        env:
+          DBT_PROFILES_DIR: ./dbt
